# tree-sitter-scd

./: .gitignore  Cargo.toml  README.md  TODO-FIX-THIS.txt  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
examples/: sample.scd
old/: scd.tmLanguage.json
old/examples/: package.scd
queries/: folds.scm  highlights.scm  indents.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  basic_values.txt  complex_nested_mapping.txt  deep_nested_mapping.txt  mixed_root_mapping.txt  nested_mapping.txt  root_mapping_with_blank_line.txt
