[package]
name = "tree-sitter-scd"
description = "SCD (Smart Contract Definition) grammar for tree-sitter"
version = "1.0.0"
keywords = ["tree-sitter", "scd", "smart-contract"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ZoralLabs/tree-sitter-scd"
edition = "2021"
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "/bindings/rust/*",
  "/grammar.js",
  "/queries/*",
  "/src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"
